--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+<img src="https://cdn.discordapp.com/attachments/1153438593642135653/1190500351636406383/imageeeeeeeeeeeeee.png">
+
+</body>
+</html>
