--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       position: absolute;
     }
   </style>
-  <title>DVD Logo Animation</title>
+  <title>hris</title>
 </head>
 <body>
 
-  <img id="dvd-logo" src="https://cdn.discordapp.com/attachments/1153438593642135653/1190500351636406383/imageeeeeeeeeeeeee.png" alt="DVD Logo">
+  <img id="hris" src="https://cdn.discordapp.com/attachments/1153438593642135653/1190500351636406383/imageeeeeeeeeeeeee.png" alt="hris">
 
   <script>
     const logo = document.getElementById('dvd-logo');
