--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <img id="hris" src="https://cdn.discordapp.com/attachments/1153438593642135653/1190500351636406383/imageeeeeeeeeeeeee.png" alt="hris">
 
   <script>
-    const logo = document.getElementById('dvd-logo');
+    const logo = document.getElementById('hris');
     const screenWidth = window.innerWidth;
     const screenHeight = window.innerHeight;
 
