--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 
     #dvd-logo {
       position: absolute;
+      width: 100px;
+      height: 50px;
     }
   </style>
-  <title>hris</title>
+  <title>Hris</title>
 </head>
 <body>
 
-  <img id="hris" src="https://cdn.discordapp.com/attachments/1153438593642135653/1190500351636406383/imageeeeeeeeeeeeee.png" alt="hris">
+  <img id="dvd-logo" src="https://cdn.discordapp.com/attachments/1153438593642135653/1190500351636406383/imageeeeeeeeeeeeee.png" alt="DVD Logo">
 
   <script>
-    const logo = document.getElementById('hris');
+    const logo = document.getElementById('dvd-logo');
     const screenWidth = window.innerWidth;
     const screenHeight = window.innerHeight;
 
