--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     body {
       margin: 0;
       overflow: hidden;
+      background: url('https://cdn.discordapp.com/attachments/818961695825199134/1190504479334875136/image.png') no-repeat center center fixed;
+      background-size: cover;
     }
 
     #dvd-logo {
       position: absolute;
+      border-radius: 5%;
+      box-shadow: 0 0 10px 5px #ff01f2; /* Adjust the glow effect here */
     }
   </style>
   <title>Hris</title>
