--- a/index.html
+++ b/index.html
@@ -9,12 +9,34 @@
       overflow: hidden;
       background: url('https://cdn.discordapp.com/attachments/818961695825199134/1190504479334875136/image.png') no-repeat center center fixed;
       background-size: cover;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-end;
+      height: 100vh;
     }
 
     #dvd-logo {
       position: absolute;
       border-radius: 5%;
-      box-shadow: 0 0 10px 5px #ff01f2; /* Adjust the glow effect here */
+      box-shadow: 0 0 10px 5px #ff01f2;
+    }
+
+    #download-button {
+      margin-bottom: 20px;
+      padding: 15px 30px;
+      font-size: 18px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      z-index: +1;
+    }
+
+    #download-button:hover {
+      background-color: #45a049;
     }
   </style>
   <title>Hris</title>
@@ -22,6 +44,8 @@
 <body>
 
   <img id="dvd-logo" src="https://cdn.discordapp.com/attachments/1153438593642135653/1190500351636406383/imageeeeeeeeeeeeee.png" alt="DVD Logo">
+
+  <button id="download-button" onclick="downloadImage()">Download Image</button>
 
   <script>
     const logo = document.getElementById('dvd-logo');
@@ -49,6 +73,20 @@
       logo.style.top = y + 'px';
 
       requestAnimationFrame(animate);
+    }
+
+    function downloadImage() {
+      const canvas = document.createElement('canvas');
+      const ctx = canvas.getContext('2d');
+      canvas.width = screenWidth;
+      canvas.height = screenHeight;
+
+      ctx.drawImage(logo, x, y, logo.width, logo.height);
+
+      const link = document.createElement('a');
+      link.href = canvas.toDataURL('image/png');
+      link.download = 'moving_image.png';
+      link.click();
     }
 
     animate();
