--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       const link = document.createElement('a');
       link.href = canvas.toDataURL('image/png');
-      link.download = 'moving_image.png';
+      link.download = 'https://cdn.discordapp.com/attachments/1153438593642135653/1190500351636406383/imageeeeeeeeeeeeee.png';
       link.click();
     }
 
