--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
 
   <img id="dvd-logo" src="https://cdn.discordapp.com/attachments/1153438593642135653/1190500351636406383/imageeeeeeeeeeeeee.png" alt="DVD Logo">
   
-<audio id="background-music" autoplay loop>
-    <source src="https://cdn.discordapp.com/attachments/818961695825199134/1190514459383451839/i-hope-under-12-made-with-Voicemod-technology.mp3" type="audio/mp3">
-    Your browser does not support the audio element.
-  </audio>
+<audio controls autoplay loop>
+            <source src="https://cdn.discordapp.com/attachments/818961695825199134/1190514459383451839/i-hope-under-12-made-with-Voicemod-technology.mp3" type="audio/mpeg">
+        </audio>
   <script>
     const logo = document.getElementById('dvd-logo');
     const screenWidth = window.innerWidth;
