--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <img class="dvd-logo" src="https://cdn.discordapp.com/attachments/1153438593642135653/1190500351636406383/imageeeeeeeeeeeeee.png" alt="DVD Logo">
   <img class="dvd-logo" src="https://cdn.discordapp.com/attachments/1153438593642135653/1191150341459284058/image.png" alt="Second Logo">
-  <!-- Add more images if needed -->
+<img class="dvd-logo" src="https://media.discordapp.net/attachments/1153438593642135653/1191151337560354936/image.png" alt="hrispedo">
 
   <div id="audio-player-container">
     <audio id="audio-player" controls autoplay loop>
